--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "author": "Tarun Velli",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "electron-packager": "^8.5.1"
   }
 }
