--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   ],
   "author": "Tarun Velli",
   "devDependencies": {
-    "electron": "^1.4.1",
-    "electron-packager": "^8.5.1"
+    "electron": "^1.4.1"
   }
 }
